--- a/style.css
+++ b/style.css
@@ -340,12 +340,12 @@ body {
     border-radius: 0;
 }
 
-.window.maximized .window-body {
+.window[data-app="contact"].maximized .window-body {
     display: flex;
     justify-content: center;
 }
 
-.window.maximized .window-body > * {
+.window[data-app="contact"].maximized .window-body > * {
     width: 100%;
     max-width: 700px;
 }
